--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,5 @@
 // IMPORTS -
+@import "variables";
 @import "mixin";
 @import "dasboard";
 
@@ -6,6 +7,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  
 }
 
 * {
@@ -19,22 +21,18 @@ a {
   color: #061826;
 }
 
-.blue {
-  color: #3b71ca;
+.green {
+  color: #04f06a;
 }
 
-.orange {
-  color: #f26419;
-}
-
-.black {
-  color: #061826;
+.red {
+  color: #a20021;
 }
 
 .adminContainer {
   @include grid(1fr 4fr, 2rem);
   height: 100vh;
-  background-color: #eff6e0;
+  background-color: #F4F7F5;
   > aside {
     width: 100%;
     background-color: white;
@@ -65,4 +63,6 @@ a {
       }
     }
   }
+
+ 
 }
