BREAKING CHANGE: COMPLETED THE BASIC PAGES

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -130,3 +130,25 @@ a {
     }
   }
 }
+
+.tablePagination {
+  @include flex;
+  padding: 2rem;
+  > button {
+    padding: 0.5rem 1rem;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: $blue;
+    color: white;
+    &:hover {
+      opacity: 0.8;
+    }
+
+    &:disabled {
+      background-color: rgba(0, 115, 255, 0.5);
+      cursor: not-allowed;
+    }
+  }
+}
