BREAKING CHANGE: BUILT MANAGEMENT PAGES

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -29,6 +29,16 @@ a {
   color: #a20021;
 }
 
+.wrapper {
+  width: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
 .adminContainer {
   @include grid(1fr 4fr, 2rem);
   height: 100vh;
