--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -26,6 +26,51 @@
   min-height: 100vh;
   overflow: hidden;
 
+  > section {
+    overflow-y: auto;
+    width: 100%;
+    height: 85vh;
+    max-width: 500px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.132);
+    background-color: white;
+    padding: 5rem;
+    @include flex(column, unset, unset, 1rem);
+    position: relative;
+    border-radius: 5px;
+
+    > h2 {
+      @include heading(2px);
+      text-align: center;
+    }
+
+    > img {
+      @include square(100%);
+      object-fit: cover;
+    }
+
+    > strong {
+      font-weight: 300;
+
+    }
+
+    > span {
+      position: absolute;
+      right: 2rem;
+      top: 2rem;
+    }
+
+    > p {
+      text-align: center;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
+
+    > h3 {
+      text-align: center;
+      font-size: 2rem;
+    }
+  }
+
   > article {
     min-height: 85vh;
     padding: 2rem;
