BREAKING CHANGE: CREATED A PIE CHART COMPONENT

--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -50,7 +50,6 @@
 
     > strong {
       font-weight: 300;
-
     }
 
     > span {
@@ -120,7 +119,60 @@
         width: 100%;
         font-size: 1rem;
         cursor: pointer;
+
+        &:hover {
+          opacity: 0.8;
+        }
       }
     }
+  }
+
+  .shippingInfo {
+    color: white;
+    > h1 {
+      text-align: center;
+      @include heading(2px);
+      overflow: hidden;
+    }
+
+    > h5 {
+      margin: 0.5rem 0 0 0.5rem;
+      font-size: 1rem;
+      font-weight: 700;
+    }
+
+    > p {
+      margin: 0.5rem;
+    }
+
+    > button {
+      margin: 0.5rem 0;
+      padding: 1rem;
+      border: none;
+      background-color: $black;
+      border-radius: 5px;
+      width: 100%;
+      font-size: 1rem;
+      cursor: pointer;
+      color: white;
+
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+  }
+}
+
+.transactionProductCard {
+  @include flex(row, unset, center, 1rem);
+
+  > img {
+    @include square(4rem);
+    object-fit: cover;
+    border-radius: 5px;
+  }
+
+  > span {
+    margin-left: auto;
   }
 }
