--- a/src/styles/_chart.scss
+++ b/src/styles/_chart.scss
@@ -1,20 +1,27 @@
 .chartContainer {
-    background-color: white;
-    padding: 4rem;
-    overflow-y: auto;
+  background-color: white;
+  padding: 4rem;
+  overflow-y: auto;
 
-    > h1 {
-        margin: 0 0 5rem 2rem;
+  > h1 {
+    margin: 0 0 5rem 2rem;
+  }
+
+  > section {
+    width: 80%;
+    margin: 4rem auto;
+
+    > div {
+      max-width: 25rem;
+      margin: auto;
+      margin-top: 6rem;
+      margin-bottom: -1rem;
     }
 
-     > section {
-        width: 80%;
-        margin: 4rem auto;
-
-        > h2 {
-            margin: 2rem 0;
-            text-align: center;
-            @include heading(2px);
-        }
-     }
+    > h2 {
+      margin: 2rem 0;
+      text-align: center;
+      @include heading(2px);
+    }
+  }
 }
