CHORE: COMPLETED THE PROJECT

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,6 +4,7 @@
 @import "dasboard";
 @import "products";
 @import "chart";
+@import "responsive";
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -165,4 +166,34 @@ a {
       cursor: not-allowed;
     }
   }
+}
+
+#hamburger {
+  display: grid;
+  place-items: center;
+  @include square(2.5rem);
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: #ffffff;
+  position: fixed;
+  top: 0.7rem;
+  left: 1.2rem;
+  font-size: 1.7rem;
+  background-color: $orange;
+  border-radius: 50%;
+  z-index: 9;
+}
+
+#close {
+  width: 80%;
+  margin: 1rem auto;
+  display: block;
+  padding: 0.75rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: $blue;
+  color: white;
+  border-radius: 10px;
 }
